added uzsakymai and uzsakymu apmokejimas pages

--- a/views/uzsakymai.html
+++ b/views/uzsakymai.html
@@ -18,12 +18,15 @@
             </tr>
             <tr>
                 <td>
-                    <a href="useredit.php" style="margin:10px">Redaguoti paskyrą</a>
-                    <a href="useredit.php" style="margin:10px">Operacija 2</a>
-                    <a href="uzsakymai.html" style="margin:10px">Užsakymai</a>
-                    <a href="useredit.php" style="margin:5px;float:right">Atsijungti</a>
+                    <a href="menu.html" style="margin:10px">Pagrindinis</a>
+                    <a href="login.html" style="margin:5px;float:right">Atsijungti</a>
                 </td>
             </tr>
         </table>
+		<table>
+            <tr>
+                <td><a href="uzsakymuapmokejimas.html" style="margin:10px">Apmokėti užsakymą</a></td>
+            </tr>
+		</table>
     </body>
 </html>
